# tplay

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: releases.yml
poc/: poc.py
src/: main.rs
src/audio/: mod.rs  mpv_player.rs  player.rs  rodio_player.rs  runner.rs  utils.rs
src/common/: errors.rs  mod.rs  sync.rs  utils.rs
src/downloader/: mod.rs  youtube.rs
src/msg/: broker.rs  mod.rs
src/pipeline/: audio.rs  char_maps.rs  frames.rs  gpu.rs  image_pipeline.rs  mod.rs  pipeline.rs  runner.rs  video_decoder.rs
src/subtitle/: extractor.rs  mod.rs  parser.rs
src/terminal/: mod.rs  terminal.rs
