[package]
name = "tplay"
version = "0.4.5"
edition = "2021"
authors = ["Max Curzi <massimiliano.curzi@gmail.com>"]
description = "A media player that visualizes images and videos as ASCII art directly in the terminal (with sound)."
repository = "https://github.com/maxcurzi/tplay"
license = "MIT"
readme = "README.md"
keywords = ["media-player", "ASCII-art", "terminal", "youtube", "video"]
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::video",
    "multimedia::images",
]
exclude = [
    ".github/",
    ".vscode/",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
    "Makefile.toml",
]
default-run = "tplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
crossterm = "0.26"
gif = "0.12"
image = "0.24"
opencv = { version = "0.84.4", default-features = false, features = [
    "videoio",
    "imgproc",
    "clang-runtime",
] }
thiserror = "1.0"
fast_image_resize = "2.7"
youtube_dl = "0.8"
tempfile = "3.5"
url = "2.3"
serde_json = "1.0"
ffmpeg-next = "6.1"
crossbeam-channel = "0.5"
num = "0.4"
either = "1.8"
libmpv = { version = "2.0.1", optional = true } # MPV 0.34
libmpv-sirno = { version = "2.0.2-fork.1", optional = true } # Temporary fix for MPV 0.35 (and probably later)
rodio = { version = "0.17", optional = true } # Audio playback alternative to mpv

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
name = "tplay"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Max Curzi <massimiliano.curzi@gmail.com>"
depends = "libopencv-dev clang libclang-dev ffmpeg libavfilter-dev libavdevice-dev libasound2-dev"

[package.metadata.features]
mpv_0_34 = []
mpv_0_35 = []
rodio_audio = []

[features]
default = ["rodio_audio"]
mpv_0_34 = ["libmpv"]
mpv_0_35 = ["libmpv-sirno"]
rodio_audio = ["rodio"]
