[package]
name = "tplay"
version = "0.5.0"
edition = "2021"
authors = ["Max Curzi <massimiliano.curzi@gmail.com>"]
description = "A media player that visualizes images and videos as ASCII art directly in the terminal (with sound)."
repository = "https://github.com/maxcurzi/tplay"
license = "MIT"
readme = "README.md"
keywords = ["media-player", "ASCII-art", "terminal", "youtube", "video"]
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::video",
    "multimedia::images",
]
exclude = [
    ".github/",
    ".vscode/",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
    "Makefile.toml",
]
default-run = "tplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
crossterm = "0.28"
gif = "0.13.1"
gif-dispose = "5.0.0-beta.2"
libwebp-sys = "0.10"
image = "0.25"
opencv = { version = "0.93", default-features = false, features = [
    "videoio",
    "imgproc",
    "clang-runtime",
] }
thiserror = "1.0"
fast_image_resize = "4.2"
youtube_dl = "0.10"
tempfile = "3.5"
url = "2.3"
serde_json = "1.0"
ffmpeg-next = "7.0.4"
crossbeam-channel = "0.5"
num = "0.4"
either = "1.8"
libmpv = { version = "2.0.1", optional = true } # MPV 0.34
libmpv-sirno = { version = "2.0.2-fork.1", optional = true } # Temporary fix for MPV 0.35 (and probably later)
rodio = { version = "0.19", optional = true } # Audio playback alternative to mpv
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "tplay"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Max Curzi <massimiliano.curzi@gmail.com>"
depends = "libopencv-dev clang libclang-dev ffmpeg libavfilter-dev libavdevice-dev libasound2-dev"

[package.metadata.features]
mpv_0_34 = []
mpv_0_35 = []
rodio_audio = []

[features]
default = ["rodio_audio"]
mpv_0_34 = ["libmpv"]
mpv_0_35 = ["libmpv-sirno"]
rodio_audio = ["rodio"]
