[package]
name = "tplay"
version = "0.8.1"
edition = "2021"
authors = ["Max Curzi <massimiliano.curzi@gmail.com>"]
description = "A media player that visualizes images and videos as ASCII art directly in the terminal (with sound)."
repository = "https://github.com/maxcurzi/tplay"
license = "MIT"
readme = "README.md"
keywords = ["media-player", "ASCII-art", "terminal", "youtube", "video"]
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::video",
    "multimedia::images",
]
exclude = [
    ".github/",
    ".vscode/",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
    "Makefile.toml",
    "*.mkv",
    "*.mp4",
    "*.mov",
    "*.patch",
    "*.xml",
]
default-run = "tplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
crossterm = "0.28"
gif = "0.13.1"
gif-dispose = "5.0.0-beta.2"
libwebp-sys = "0.11"
image = "0.25"
thiserror = "2.0"
fast_image_resize = "5.0.0"
youtube_dl = "0.10"
tempfile = "3.5"
url = "2.3"
serde_json = "1.0"
ffmpeg-next = "8.1.0"
crossbeam-channel = "0.5"
num = "0.4"
either = "1.8"
serde = { version = "1.0", features = ["derive"] }
libmpv = { version = "5.0.3", package = "libmpv2", optional = true } # MPV 0.35+
rodio = { version = "0.20.1", optional = true } # Audio playback alternative to mpv
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "tplay"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Max Curzi <massimiliano.curzi@gmail.com>"
depends = "ffmpeg libavfilter-dev libavdevice-dev libasound2-dev"

[package.metadata.features]
mpv = []
rodio_audio = []

[features]
default = ["mpv"]
mpv = ["libmpv"]
rodio_audio = ["rodio"]
